--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/null.css">
-    <link rel="stylesheet" href="/css/hystmodal.css">
-    <link rel="stylesheet" href="/css/hystmodal.min.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/null.css">
+    <link rel="stylesheet" href="./css/hystmodal.css">
+    <link rel="stylesheet" href="./css/hystmodal.min.css">
     <title>Ideality</title>
 </head>
 
