--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <div class="container">
                 <ul class="header-menu_socials">
                     <li>
-                        <a href="tel:+"><img src="/img/icons/phone.png" alt="tel"></a>
+                        <a href="tel:+"><img src="./img/icons/phone.png" alt="tel"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="/img/icons/viber.png" alt="viber"></a>
+                        <a href="#"><img src="./img/icons/viber.png" alt="viber"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="/img/icons/telegram.png" alt="telegram"></a>
+                        <a href="#"><img src="./img/icons/telegram.png" alt="telegram"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="/img/icons/instagram.png" alt="instagram"></a>
+                        <a href="#"><img src="./img/icons/instagram.png" alt="instagram"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="/img/icons/facebook.png" alt="facebook"></a>
+                        <a href="#"><img src="./img/icons/facebook.png" alt="facebook"></a>
                     </li>
                 </ul>
                 <div class="header-logo">
@@ -473,17 +473,17 @@
                         Для запису на процедури Ви можете скористатися будь-яким зручним способом для Вас
                     </div>
                     <div class="footer-contacts_tel">
-                        <a href="tel:+"><img src="/img/icons/phone-2.png" alt="tel">+3800000000</a>
+                        <a href="tel:+"><img src="./img/icons/phone-2.png" alt="tel">+3800000000</a>
                     </div>
                     <ul class="footer-contacts_social">
                         <li>
-                            <a href="#"><img src="/img/icons/viber.png" alt="viber"></a>
+                            <a href="#"><img src="./img/icons/viber.png" alt="viber"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="/img/icons/telegram.png" alt="telegram"></a>
+                            <a href="#"><img src="./img/icons/telegram.png" alt="telegram"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="/img/icons/instagram.png" alt="instagram"></a>
+                            <a href="#"><img src="./img/icons/instagram.png" alt="instagram"></a>
                         </li>
                         <li>
                             <a href="#"><img src="/img/icons/facebook.png" alt="facebook"></a>
@@ -500,7 +500,7 @@
         <div class="author"> Created by Sonyachna Yulia</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="/js/burger.js"></script>
+    <script src="./js/burger.js"></script>
     <script src="./js/drop-down.js"></script>
     <script src="./js/hystmodal.min.js"></script>
     <script>
