--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             <a href="#"><img src="./img/icons/instagram.png" alt="instagram"></a>
                         </li>
                         <li>
-                            <a href="#"><img src="/img/icons/facebook.png" alt="facebook"></a>
+                            <a href="#"><img src="./img/icons/facebook.png" alt="facebook"></a>
                         </li>
                     </ul>
                 </div>
